[gd_scene load_steps=7 format=3 uid="uid://dapf23v7r06pk"]

[ext_resource type="Script" path="res://Game/game_manager.gd" id="1_jkbmv"]
[ext_resource type="PackedScene" uid="uid://ckvkv3plb4arj" path="res://Game/camera_2d.tscn" id="1_mqw14"]
[ext_resource type="PackedScene" uid="uid://bjxmpt84gkaov" path="res://Game/Levels/level_1.tscn" id="2_0hxx3"]
[ext_resource type="PackedScene" uid="uid://bjx5beibty7lr" path="res://Game/Paddle/paddle.tscn" id="3_31cgl"]
[ext_resource type="PackedScene" uid="uid://cik3us1ca1grp" path="res://Game/Ball/ball.tscn" id="4_nyhvm"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1uayy"]

[node name="Game" type="Node2D"]
script = ExtResource("1_jkbmv")

[node name="Camera2D" parent="." instance=ExtResource("1_mqw14")]
unique_name_in_owner = true

[node name="Paddle" parent="." instance=ExtResource("3_31cgl")]
position = Vector2(-9.53674e-07, 11)
scale = Vector2(0.063, 0.063)

[node name="Ball" parent="." instance=ExtResource("4_nyhvm")]
position = Vector2(0, 4)
scale = Vector2(0.063, 0.063)

[node name="TopBoundary" type="StaticBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, -32)
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBoundary"]
position = Vector2(1, -16)
shape = SubResource("WorldBoundaryShape2D_1uayy")

[node name="BottomBoundary" type="StaticBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBoundary"]
position = Vector2(1, -16)
shape = SubResource("WorldBoundaryShape2D_1uayy")

[node name="LeftBoundary" type="StaticBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(-43, 1)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBoundary"]
position = Vector2(1, -16)
shape = SubResource("WorldBoundaryShape2D_1uayy")

[node name="RightBoundary" type="StaticBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(43, 0)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBoundary"]
position = Vector2(1, -16)
shape = SubResource("WorldBoundaryShape2D_1uayy")

[node name="Scaled" type="Node2D" parent="."]

[node name="Level1" parent="Scaled" instance=ExtResource("2_0hxx3")]
unique_name_in_owner = true
